--- a/Labs/Week2/Week 2 Labs/MusicStore/MusicStore.csproj
+++ b/Labs/Week2/Week 2 Labs/MusicStore/MusicStore.csproj
@@ -67,8 +67,12 @@
   <ItemGroup>
     <Content Include="AlbumDetails.html" />
     <Content Include="Images\Album.gif" />
+    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\jquery-2.1.3.min.js" />
     <Content Include="Styles\bootstrap.css" />
     <Content Include="Styles\bootstrap.min.css" />
+    <Content Include="SubmitAlbum.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
